bdr.BDR.scala.error
Compilation error:
BDR:5: error: not found: value getIndication
  x=getIndication();
    ^BDR:7: error: type mismatch;
 found   : String("R")
 required: Int
  if(x="R"){
       ^BDR:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if(x="R"){
      ^BDR:11: error: type mismatch;
 found   : String("L")
 required: Int
  else if(x="L"){
            ^BDR:11: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="L"){
           ^BDR:15: error: type mismatch;
 found   : String("I")
 required: Int
  else if(x="I"){
            ^BDR:15: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="I"){
           ^BDR:20: error: type mismatch;
 found   : String("A")
 required: Int
  else if(x="A"){
            ^BDR:20: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="A"){
           ^BDR:23: error: type mismatch;
 found   : String("B")
 required: Int
  else if(x="B"){
            ^BDR:23: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="B"){
           ^BDR:27: error: type mismatch;
 found   : String("C")
 required: Int
  else if(x="C"){
            ^BDR:27: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="C"){
           ^BDR:32: error: type mismatch;
 found   : String("Z")
 required: Int
  else if(x="Z"){
            ^BDR:32: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="Z"){
           ^BDR:35: error: type mismatch;
 found   : String("Y")
 required: Int
  else if(x="Y"){
            ^BDR:35: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="Y"){
           ^BDR:39: error: type mismatch;
 found   : String("X")
 required: Int
  else if(x="X"){
            ^BDR:39: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(x="X"){
           ^